--- a/app/src/main/res/layout/plan_delete_item.xml
+++ b/app/src/main/res/layout/plan_delete_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/delete_content_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumsquareroundr"
         android:padding="10dp"
         android:text="TextView" />
 </LinearLayout>
