--- a/app/src/main/res/layout/account_list_item.xml
+++ b/app/src/main/res/layout/account_list_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp" />
 
@@ -17,6 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.5"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp" />
 
