--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context=".Diary.NoteActivity">
 
     <LinearLayout
@@ -52,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="@font/nanumsquareroundr"
                 android:paddingLeft="5dp"
                 android:text="TextView" />
 
@@ -60,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="@font/nanumsquareroundr"
                 android:gravity="right"
                 android:paddingRight="5dp"
                 android:text="TextView" />
@@ -77,6 +80,7 @@
                 android:id="@+id/content_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/nanumsquareroundr"
                 android:paddingLeft="5dp"
                 android:paddingTop="10dp"
                 android:text="TextView" />
