--- a/app/src/main/res/layout/activity_plan_add.xml
+++ b/app/src/main/res/layout/activity_plan_add.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@android:color/background_light"
     android:orientation="vertical">
 
     <LinearLayout
@@ -23,6 +24,7 @@
             android:layout_marginTop="108dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:fontFamily="@font/nanumsquareroundr"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +41,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareroundr"
             android:hint="일정을 적어주세요"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,11 +58,15 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/nanumsquareroundr"
             android:text="추가하기"
+            android:textColor="@android:color/background_light"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/plan_edit" />
+            app:layout_constraintTop_toBottomOf="@+id/plan_edit"
+            android:stateListAnimator="@null"/>
     </LinearLayout>
 
 </LinearLayout>
