--- a/app/src/main/res/layout/activity_plan_delete.xml
+++ b/app/src/main/res/layout/activity_plan_delete.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@android:color/background_light"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,6 +19,7 @@
             android:id="@+id/delete_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundr"
             android:text="삭제할 일정을 클릭하세요\n 클릭하면 바로 삭제됩니다" />
     </LinearLayout>
 
