--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -32,13 +32,15 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/title_text"
                     android:layout_width="344dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:fontFamily="@font/nanumsquareroundr"
                     android:padding="10dp"
                     android:text="타이틀"
                     android:textSize="18sp"
@@ -83,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
+                    android:fontFamily="@font/nanumsquareroundr"
                     android:padding="10dp"
                     android:text="닉네임" />
 
@@ -92,6 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
+                    android:fontFamily="@font/nanumsquareroundr"
                     android:padding="10dp"
                     android:text="날짜" />
 
@@ -110,7 +114,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
+                    android:fontFamily="@font/nanumsquareroundr"
                     android:text="content"
+                    android:textSize="14sp"
                     tools:layout_editor_absoluteX="65dp"
                     tools:layout_editor_absoluteY="193dp" />
             </LinearLayout>
@@ -149,6 +155,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareroundr"
             android:hint="댓글"
             android:inputType="text"
             android:padding="10dp" />
@@ -159,8 +166,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/nanumsquareroundr"
             android:padding="10dp"
-            android:text="입력" />
+            android:text="입력"
+            android:textColor="@android:color/background_light" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
