--- a/app/src/main/res/layout/activity_select_main.xml
+++ b/app/src/main/res/layout/activity_select_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="90dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/background_light"
+        android:fontFamily="sans-serif"
         android:stateListAnimator="@null"
         android:text="로그아웃"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/background_light"
+        android:fontFamily="sans-serif"
         android:stateListAnimator="@null"
         android:text="알람설정"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,25 +35,27 @@
 
     <ImageButton
         android:id="@+id/Cal_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="60dp"
+        android:background="@android:color/background_light"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView4"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/account_img" />
 
     <ImageButton
         android:id="@+id/Diary_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="12dp"
+        android:background="@android:color/background_light"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView4"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/diary_img" />
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/select_cal"
