--- a/app/src/main/res/layout/comment_item_list.xml
+++ b/app/src/main/res/layout/comment_item_list.xml
@@ -13,11 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:padding="5dp"
         android:text="닉네임"
         android:textAlignment="center"
+        android:textSize="14sp"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,8 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:text="댓글내용"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/comment_itemnick"
         app:layout_constraintStart_toEndOf="@+id/comment_itemnick" />
 
