--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -48,17 +48,22 @@
 
                         <Button
                             android:id="@+id/write"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="206dp"
+                            android:layout_height="50dp"
+                            android:background="@color/colorPrimary"
+                            android:fontFamily="@font/nanumsquareroundr"
                             android:gravity="center"
-                            android:text="글쓰기" />
+                            android:text="글쓰기"
+                            android:textColor="@android:color/background_light" />
 
                         <Button
                             android:id="@+id/logout_btn"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:text="로그아웃" />
+                            android:background="@color/colorAccent"
+                            android:text="로그아웃"
+                            android:textColor="@android:color/background_light" />
                     </LinearLayout>
 
                 </LinearLayout>
