--- a/app/src/main/res/layout/pageone_item_list.xml
+++ b/app/src/main/res/layout/pageone_item_list.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:padding="5dp"
         android:text="제목"
         android:textAlignment="center"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:padding="5dp"
         android:text="날짜"
         android:textAlignment="center"
@@ -43,9 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="13dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
