--- a/app/src/main/res/layout/pagethree_item_list.xml
+++ b/app/src/main/res/layout/pagethree_item_list.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareroundr"
             android:text="보낸이" />
 
         <View
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareroundr"
             android:text="TextView" />
     </LinearLayout>
 
@@ -39,6 +41,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
+        android:fontFamily="@font/nanumsquareroundr"
         android:text="TextView" />
 
 </LinearLayout>
