--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,14 +8,22 @@
     tools:context=".sign.SignUpActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="279dp"
+        android:layout_height="238dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/logo" />
+
     <LinearLayout
         android:layout_width="294dp"
-        android:layout_height="477dp"
+        android:layout_height="426dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/cardview_light_background"
         android:orientation="vertical"
@@ -23,8 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.76">
+        app:layout_constraintTop_toBottomOf="@+id/imageView6">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,8 +126,8 @@
 
         <Button
             android:id="@+id/Signup_btn"
-            android:layout_width="157dp"
-            android:layout_height="43dp"
+            android:layout_width="104dp"
+            android:layout_height="37dp"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
