--- a/app/src/main/res/layout/activity_note_send.xml
+++ b/app/src/main/res/layout/activity_note_send.xml
@@ -14,6 +14,14 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="159dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:paddingTop="30dp"
+            app:srcCompat="@drawable/small_logo" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,24 +29,25 @@
 
             <TextView
                 android:id="@+id/titleText"
-                android:layout_width="310dp"
+                android:layout_width="322dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:paddingLeft="10dp"
-                android:text="id님께 쪽지를 보냅니다" />
+                android:text="id님께 쪽지를 보냅니다"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/noteOk_btn"
-                android:layout_width="236dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/pink"
+                android:background="@android:color/background_light"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:paddingTop="10dp"
                 android:stateListAnimator="@null"
                 android:text="전송하기"
-                android:textColor="@android:color/background_light"
-                android:textStyle="bold" />
+                android:textColor="@color/colorPrimary"
+                android:textColorLink="@color/colorPrimary"
+                android:textStyle="normal|bold" />
 
         </LinearLayout>
 
