--- a/app/src/main/res/layout/fragment_page_four.xml
+++ b/app/src/main/res/layout/fragment_page_four.xml
@@ -5,13 +5,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/four_calendar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:mcv_selectionColor="@color/colorPrimary"
-        app:mcv_showOtherDates="all"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/four_calendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:mcv_selectionColor="@color/colorPrimary"
+            app:mcv_showOtherDates="all" />
+
+        <TextView
+            android:id="@+id/fout_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:gravity="center"
+            android:paddingTop="20dp"
+            android:paddingBottom="10dp"
+            android:text="일기를 작성한 날을 볼 수 있습니다" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
