--- a/app/src/main/res/layout/comment_item_list.xml
+++ b/app/src/main/res/layout/comment_item_list.xml
@@ -8,31 +8,37 @@
     android:background="@drawable/stroke_down"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/comment_itemnick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/nanumsquareroundr"
-        android:padding="5dp"
-        android:text="닉네임"
-        android:textAlignment="center"
-        android:textSize="14sp"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/comment_itemnick"
+            android:layout_width="77dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:padding="5dp"
+            android:text="닉네임"
+            android:textAlignment="textStart"
+            android:textSize="14sp"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/comment_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:fontFamily="@font/nanumsquareroundr"
-        android:text="댓글내용"
-        android:textSize="14sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/comment_itemnick"
-        app:layout_constraintStart_toEndOf="@+id/comment_itemnick" />
+        <TextView
+            android:id="@+id/comment_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:padding="5dp"
+            android:text="댓글내용"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/comment_itemnick"
+            app:layout_constraintStart_toEndOf="@+id/comment_itemnick" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
