--- a/app/src/main/res/layout/activity_account_main.xml
+++ b/app/src/main/res/layout/activity_account_main.xml
@@ -44,7 +44,7 @@
                 android:background="@android:color/background_light"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:stateListAnimator="@null"
-                android:text="오늘의 지출 차트"
+                android:text="달별 지출 차트"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
 
@@ -83,7 +83,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="10dp">
@@ -94,8 +94,8 @@
                 android:layout_weight="0.5"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:gravity="center_vertical|right"
-                android:text="합계 :"
-                android:textSize="24dp" />
+                android:text="오늘 합계 :"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/total_sum"
@@ -106,7 +106,25 @@
                 android:fontFamily="@font/nanumsquareroundr"
                 android:gravity="center_vertical"
                 android:hint="0"
-                android:textSize="24dp" />
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:gravity="right"
+                android:text="이번달 합계: "
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/month_sum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:text="0"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
